# qemu-docker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  buildrun.sh  exec.sh  gdb.script  gdbgui.sh  run-uboot.sh
app/: CMakeLists.txt  build.sh  run-qemu.sh.in
app/cmake/: cross_compile.cmake
app/link/: qemu-a7.lds  qemu-a9.lds  zybo.lds
app/src/: hello.c  imx_uart.c  startup.S  uart.h  zynq_uart.c
